[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tilesheets/colored_transparent.png" type="Texture" id=1]
[ext_resource path="res://UI/DialogPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Merchant/Merchant.gd" type="Script" id=3]

[sub_resource type="Animation" id=3]
resource_name = "merchant_show_evil"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EvilSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0 ), Vector2( 1.9, 0 ), Vector2( -0.9, 0 ), Vector2( 0.9, 0 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 4.02127

[sub_resource type="CircleShape2D" id=2]
radius = 54.609

[node name="Merchant" type="KinematicBody2D"]
collision_layer = 2147483904
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.9, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 478, 69, 13, 14 )

[node name="EvilSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 409, 119, 14, 16 )

[node name="EvilAnimation" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/merchant_show_evil = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="InteractRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
visible = false
shape = SubResource( 2 )

[node name="DialoguePanel" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="body_entered" from="InteractRange" to="." method="_on_InteractRange_body_entered"]
[connection signal="body_exited" from="InteractRange" to="." method="_on_InteractRange_body_exited"]
